--- a/CP2/WebContent/views/MoEDTRCD.xhtml
+++ b/CP2/WebContent/views/MoEDTRCD.xhtml
@@ -16,6 +16,9 @@
 	<h:body>
 
 		<h:form name="MoEDTRCD_form" style="border-style: solid; border-color: silver; border-width: 10px;">
+		
+			Para cargar desde java:#{MoRCD_AF.dspfil()}
+		
 			<div class="modal-header">
 
 					<!-- <li>logon_USR &nbsp; {{actionForm.logon_USR}}</li> -->
